[package]
name = "sorbus"
version = "0.5.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "A tree manipulation library"
homepage = "https://github.com/delehef/sorbus"
documentation = "https://github.com/delehef/sorbus"
repository = "https://github.com/delehef/sorbus"
readme = "README.org"

[dependencies]
