[package]
name = "sorbus"
version = "0.8.1"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "A tree manipulation library"
homepage = "https://github.com/delehef/sorbus"
documentation = "https://github.com/delehef/sorbus"
repository = "https://github.com/delehef/sorbus"
readme = "README.org"

[dependencies]
identity-hash = "0.1.0"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
